# atlas

./: LICENSE  README.md  api_config.py  atlas.py  config.py  data_training.txt  installer.py  pyproject.toml  requirements.txt  utils.py
commands/: __init__.py  channels.py  finetune.py  infer.py  train.py  transfer.py
